test/message/esm_import_assertion_failed.out
node:internal/errors:*
    ErrorCaptureStackTrace(err);
    ^

TypeError [ERR_IMPORT_ASSERTION_TYPE_FAILED]: Module "data:text/javascript,export{}" is not of type "json"
    at new NodeError (node:internal/errors:*:*)
    at handleInvalidType (node:internal/modules/esm/assert:*:*)
    at validateAssertions (node:internal/modules/esm/assert:*:*)
    at defaultLoad (node:internal/modules/esm/load:*:*)
    at ESMLoader.load (node:internal/modules/esm/loader:*:*)
    at ESMLoader.moduleProvider (node:internal/modules/esm/loader:*:*)
    at new ModuleJob (node:internal/modules/esm/module_job:*:*)
    at ESMLoader.#createModuleJob (node:internal/modules/esm/loader:*:*)
    at ESMLoader.getModuleJob (node:internal/modules/esm/loader:*:*)
    at async ModuleWrap.<anonymous> (node:internal/modules/esm/module_job:*:*) {
  code: 'ERR_IMPORT_ASSERTION_TYPE_FAILED'
}
Node.js *
